--- a/login.html
+++ b/login.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>로그인페이지</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
 </head>
+
 <style>
+    * {
+        font-family: 'Jua', sans-serif;
+    }
+
     .mytitle {
         width: 300px;
         height: 200px;
@@ -29,8 +37,8 @@
     .mybutton {
         width: 300px;
         height: 50px;
-        background-color: brown;
         color: white;
+        background-color: brown;
         border-radius: 20px;
     }
 </style>
