--- a/xmas.html
+++ b/xmas.html
@@ -124,7 +124,7 @@
     }
 
     function go_rtan() {
-      alert('아포 터치하지말랬잔아ㅡㅡ');
+      alert('하앜 기분좋아 터치하지말랬잔아');
     }
 
   </script>
@@ -149,7 +149,7 @@
       이쁘고 웃음만 나오는 사랑하자 <br />
       항상 사랑한단다 <br />
       저이미지는 귀중한거니깐 <br />
-      터치하면 아야해 <br />
+      터치하면 아퍼해 <br />
       <p class="from">2020.01.03 희수아빠가..</p>
     </div>
   </div>
